--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ tagline: cybersecurity
 description: RedTeam and other security related stuff
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/Sa1riil/Sa1riil.github.io/raw/master/images/ratusca.jpg
+avatar: https://github.com/whmacmac/whmacmac.github.io/raw/master/images/ratusca.jpg
 
 #
 # Flags below are optional
@@ -33,7 +33,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://Sa1riil.github.io
+url: https://whmacmac.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
